--- a/JavaFXChart/build.gradle
+++ b/JavaFXChart/build.gradle
@@ -14,3 +14,12 @@ dependencies {
     compile("com.fasterxml.jackson.core:jackson-databind:2.5.1")
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+task runfx(type:JavaExec) {
+    main = 'FinanceUI'
+    systemProperties System.getProperties()
+    classpath = sourceSets.main.runtimeClasspath
+    minHeapSize = "1G"
+    maxHeapSize = "1G"
+    jvmArgs = ["-XX:+UseConcMarkSweepGC", "-XX:+UseParNewGC"]
+}
