--- a/FinanceStreamSimulator/src/main/resources/application.properties
+++ b/FinanceStreamSimulator/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 serverUrl=http://localhost:9000
 geodeUrl=http://localhost:8080
-numberOfMessages=1000
+numberOfMessages=10
 delayInMs=500
 basePrice=20.5
 scale=2
-symbol=EMC 
+symbol=TSLA
