--- a/FinanceStreamSimulator/src/main/resources/application.properties
+++ b/FinanceStreamSimulator/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-serverUrl=http://localhost:9000
-geodeUrl=http://localhost:8080
+serverUrl=http://xd-server:9000
+geodeUrl=http://geode-server:8080
 numberOfMessages=1000
 delayInMs=300
 basePrice=20.5
