--- a/Dockerfile-streaming
+++ b/Dockerfile-streaming
@@ -1,6 +1,13 @@
-FROM    centos:centos6
+FROM 	ubuntu:14.04
 
-RUN	yum install -y wget which tar unzip nc 
+RUN	echo deb http://cran.cnr.Berkeley.edu/bin/linux/ubuntu trusty/ >> /etc/apt/sources.list
+RUN	apt-get	update
+RUN 	apt-get -y  --force-yes install r-base r-base-dev
+RUN 	apt-get -y   install libcurl4-openssl-dev
+
+RUN	apt-get -y install wget tar unzip 
+
+RUN	R -e 'install.packages(c("RCurl","quantmod","TTR","jsonlite","RSNNS"), repos="http://cran.us.r-project.org")'
 
 RUN	wget --no-cookies --no-check-certificate --header "Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie" "http://download.oracle.com/otn-pub/java/jdk/8u45-b14/jdk-8u45-linux-x64.tar.gz"
 RUN	tar xvf jdk-8u45-linux-x64.tar.gz
